--- a/Gent/Podfile
+++ b/Gent/Podfile
@@ -17,6 +17,13 @@ pod 'KeychainSwift'
   target 'GentTests' do
     inherit! :search_paths
     # Pods for testing
+    pod 'Firebase'
+    pod 'Firebase/Auth'
+    pod 'Firebase/Database'
+    
+    pod 'Stripe'
+    pod 'Alamofire'
+    pod 'KeychainSwift'
   end
 
   target 'GentUITests' do
