--- a/Gent/Podfile
+++ b/Gent/Podfile
@@ -13,6 +13,7 @@ pod 'Firebase/Database'
 pod 'Stripe'
 pod 'Alamofire'
 pod 'KeychainSwift'
+pod 'SwiftyJSON'
 
   target 'GentTests' do
     inherit! :search_paths
