--- a/Gent/Podfile
+++ b/Gent/Podfile
@@ -15,6 +15,8 @@ pod 'Alamofire'
 
 pod 'SwiftyJSON'
 
+pod 'ReachabilitySwift'
+
   target 'GentTests' do
     inherit! :search_paths
     # Pods for testing
