firebase functions stripe implementation

--- a/Gent/Gent/FB_Func/firebase.json
+++ b/Gent/Gent/FB_Func/firebase.json
@@ -5,7 +5,9 @@
       // Add the following rewrites section *within* "hosting"
      "rewrites": [ {
         "source": "/bigben", "function": "bigben"
-      } ]
+      } , {
+        "source": "/trigger1", "function": "trigger1"
+      }]
   
     }
   }
