--- a/Gent/Gent/FB_Func/functions/package.json
+++ b/Gent/Gent/FB_Func/functions/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "firebase-admin": "~5.4.2",
-    "firebase-functions": "^0.7.1"
+    "firebase-functions": "^0.7.1",
+    "stripe": "^4.15.0"
   },
   "private": false
 }
