--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ fastlane/test_output
 .DS_Store
 Gent/Gent/Stripe NodeJS server/node_modules
 Gent/Gent/FB_Func/functions/node_modules
+Gent/Gent/FB_Func/node_modules
